version/0.18/_sources/api/solver/_autosummary/settings/beams.rst.txt
:orphan:

.. _beams:

beams
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.beams.beams
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

:ref:`copy <copy>`                                Copy optical beam grid.

========================================   ==============================

.. rubric:: Named object type

:ref:`beams_child <beams_child>`


.. rubric:: Included in:

======================   ================================

Parent                                            Summary

======================   ================================
:ref:`optics <optics>`       Enter the optics model menu.

======================   ================================

