version/0.19/_sources/api/solver/_autosummary/settings/beams.rst.txt
:orphan:

.. _beams:

beams
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.beams.beams
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

:ref:`copy <copy>`                                             Copy optical beam grid.

==========================================   =========================================

.. rubric:: Named object type

:ref:`beams_child <beams_child>`


.. rubric:: Included in:

======================   ================================

Parent                                            Summary

======================   ================================
:ref:`optics <optics>`       Enter the optics model menu.

======================   ================================

